LRMP version, but slow